--- a/kaggle_api_and_openml_library.ipynb
+++ b/kaggle_api_and_openml_library.ipynb
@@ -47,6 +47,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip freeze > requirements.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 6,
       "metadata": {
         "id": "2iyNW2--Ootx"
@@ -54,7 +63,7 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import kaggle, openml, os, zipfile, xlsxwriter, os\n",
+        "import kaggle, openml, xlsxwriter, os\n",
         "\n",
         "from warnings import filterwarnings\n",
         "\n",
