Refactor code structure for improved readability and maintainability

--- a/kaggle_api_and_openml_library.ipynb
+++ b/kaggle_api_and_openml_library.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "{\"id\": 7306260, \"ref\": \"aryan208/student-habits-and-academic-performance-dataset\", \"subtitle\": \"Analyze how habits and mental health shape student success.\", \"creatorName\": \"Aryan Kumar\", \"creatorUrl\": \"aryan208\", \"totalBytes\": 2994172, \"url\": \"https://www.kaggle.com/datasets/aryan208/student-habits-and-academic-performance-dataset\", \"lastUpdated\": \"2025-05-02T00:27:34.627Z\", \"downloadCount\": 6614, \"isPrivate\": false, \"isFeatured\": false, \"licenseName\": \"CC0: Public Domain\", \"description\": \"\", \"ownerName\": \"Aryan Kumar\", \"ownerRef\": \"aryan208\", \"kernelCount\": 5, \"title\": \"Student Habits and Academic Performance Dataset\", \"topicCount\": 0, \"viewCount\": 26831, \"voteCount\": 58, \"currentVersionNumber\": 1, \"usabilityRating\": 1.0, \"tags\": [{\"ref\": \"education\", \"name\": \"education\", \"description\": \"Education datasets and kernels relate to statistics on student performance, university rankings, and answers for all your homework questions.\", \"fullPath\": \"subject > people and society > education\", \"competitionCount\": 60, \"datasetCount\": 35778, \"scriptCount\": 15142, \"totalCount\": 50980}, {\"ref\": \"computer science\", \"name\": \"computer science\", \"description\": \"There is one thing we can say for sure about computer science: Computer science leads to more computer games which leads to better GPUs which leads to smarter AI.\", \"fullPath\": \"subject > science and technology > computer science\", \"competitionCount\": 16, \"datasetCount\": 57897, \"scriptCount\": 776, \"totalCount\": 58689}], \"files\": [], \"versions\": []}"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "8VwFefXQhyiT"
@@ -11,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -21,14 +30,17 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "La sintaxis del comando no es correcta.\n",
-            "\"mv\" no se reconoce como un comando interno o externo,\n",
-            "programa o archivo por lotes ejecutable.\n",
-            "\"chmod\" no se reconoce como un comando interno o externo,\n",
-            "programa o archivo por lotes ejecutable.\n"
+            "mv: cannot stat 'kaggle.json': No such file or directory\n",
+            "chmod: cannot access '/root/.kaggle/kaggle.json': No such file or directory\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m160.4/160.4 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m175.3/175.3 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m93.1/93.1 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m48.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+            "\u001b[?25h  Building wheel for liac-arff (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
@@ -60,27 +72,15 @@
       "metadata": {
         "id": "2iyNW2--Ootx"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'kaggle'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkaggle\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mopenml\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mxlsxwriter\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mwarnings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m filterwarnings\n\u001b[32m      6\u001b[39m filterwarnings(\u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m)\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'kaggle'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import kaggle, openml, xlsxwriter, os\n",
+        "import openml, xlsxwriter, os\n",
         "\n",
         "from warnings import filterwarnings\n",
         "\n",
         "filterwarnings(\"ignore\")\n",
-        "kaggle.api.authenticate()"
+        "# kaggle.api.authenticate()"
       ]
     },
     {
@@ -315,21 +315,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
         "id": "w8P6P6H7Oovq"
       },
       "outputs": [],
       "source": [
         "openml_records = pd.DataFrame(columns=['title', 'file-name', 'description', 'link'])\n",
-        "openml_records.to_excel('openml_datasets_information.xlsx',\n",
+        "openml_records.to_excel('./openml_datasets_information.xlsx',\n",
         "                        index=None,\n",
         "                        engine=\"xlsxwriter\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -377,7 +377,7 @@
               "Index: []"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -389,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -402,7 +402,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "WARNING:openml.datasets.functions:Could not download file from http://openml1.win.tue.nl/dataset33/dataset_33.pq: Bucket does not exist or is private.\n"
+            "Could not download file from http://openml1.win.tue.nl/dataset33/dataset_33.pq: HTTPConnectionPool(host='openml1.win.tue.nl', port=80): Max retries exceeded with url: /dataset33/dataset_33.pq (Caused by ProtocolError('Connection aborted.', RemoteDisconnected('Remote end closed connection without response')))\n"
           ]
         }
       ],
@@ -482,9 +482,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python (exp-physics)",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "exp-physics"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -496,7 +496,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.11.2"
     },
     "orig_nbformat": 4
   },
